--- a/theme.css
+++ b/theme.css
@@ -121,50 +121,52 @@
     width: 43%;
     float: left; 
 
-}
+    }
 
 
-  #col-camere {
+    #col-camere {
     padding-top: 1%;
     width: 100%;
     float: left; 
 
-}
+    }
 
 
-.miniature {                /* le miniature delle camere max 200 */
+    .miniature {                /* le miniature delle camere max 200 */
     width: 300px;
     margin:10px;
     padding: 5px;
     transition: all .2s ease-in-out;
     }
-.miniature:hover { width: 500px }
+    .miniature:hover { width: 500px }
 
 
+
+
+/*social img*/
 .social-logo {
- max-width: 40px; margin:5px; 
-    }
+max-width: 40px; margin:5px;}
 
 
 
 
 
 
-    /*
-    .floating-box {
-    display: inline-block;
-    width: 100%;
-    height: 75px;
-    margin: 10px;
-    border: 3px solid #73AD21; 
-    }*/
+/*
+.floating-box {
+display: inline-block;
+width: 100%;
+height: 75px;
+margin: 10px;
+border: 3px solid #73AD21; 
+}*/
 
 
-    /*
-    .language {
-    color: black; 
-    font-variant: small-caps/*; font-size: larger}
-    .social {text-align: left}*/
+/*
+.language {
+color: black; 
+font-variant: small-caps/*; font-size: larger}
+.social {text-align: left}*/
 
 
 
