--- a/theme.css
+++ b/theme.css
@@ -95,7 +95,7 @@
 
     /* la voce di menu attiva cambia colore */
     .active {
-    background-color: #594;
+    background-color: #ED6B9F;
     }
 
     /*stile immagine testata*/
