--- a/theme.css
+++ b/theme.css
@@ -124,7 +124,7 @@
     }
 
 
-    #col-camere {
+    .col-camere {
     padding-top: 1%;
     width: 100%;
     float: left; 
@@ -146,34 +146,5 @@
 /*social img*/
 .social-logo {
 max-width: 40px; margin:5px;}
-
-
-
-
-
-
-/*
-.floating-box {
-display: inline-block;
-width: 100%;
-height: 75px;
-margin: 10px;
-border: 3px solid #73AD21; 
-}*/
-
-
-/*
-.language {
-color: black; 
-font-variant: small-caps/*; font-size: larger}
-.social {text-align: left}*/
-
-
-
-
-
-
-
-
 
 
